# LockedIn

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.ko.md  README.md  README.zh.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  korean_reviewer_onboarding.yml
.github/workflows/: ci.yml
docs/: architecture.md  cli.md  diagram-reference.md  hud.md  ontology-mapping.md  ontology-spec.md  orchestration.md
docs/adr/: 0001-viz-library.md
docs/assets/: .gitkeep
examples/: sample-vault.yaml
lockedin/: __init__.py  __main__.py  cli.py  config.py
lockedin/commands/: __init__.py  doctor.py  experience.py  hud.py  ingest_dry.py  init.py  install.py  migrate.py  render_graph.py  template.py  validate.py
lockedin/hud/: __init__.py  oauth_usage.py
lockedin/ingest/: _parse_helpers.py  _section_heuristics.py  docx.py  interview.py  markdown.py  pdf.py  text.py
lockedin/ontology/: __init__.py  schema.py
lockedin/render/: graph_html.py  master_view.py  resolve_slugs.py
lockedin/storage/: graph.py  notes.py
plugins/lockedin/.claude-plugin/: plugin.json
plugins/lockedin/commands/: setup.md
plugins/lockedin/scripts/: .gitkeep  hud.py
plugins/lockedin/skills/lockedin/: AGENTS.md  SKILL.md  TOOLS.md
plugins/lockedin/skills/lockedin-audit/: AGENTS.md  RUBRIC.md  SKILL.md  TOOLS.md  prompt-refiner.md  prompt-reviewer.md  prompt-scorer.md
plugins/lockedin/skills/lockedin-capture/: AGENTS.md  RUBRIC.md  SKILL.md  TOOLS.md  banned_phrases.json  prompt-reviewer.md  prompt-writer.md  research-notes.md
plugins/lockedin/skills/lockedin-render-ideas/: RUBRIC.md  SKILL.md  banned_phrases.json  prompt-reviewer.md  prompt-writer.md  research-notes.md
plugins/lockedin/skills/lockedin-render-interview/: RUBRIC.md  SKILL.md  banned_phrases.json  prompt-reviewer.md  prompt-writer.md  research-notes.md
plugins/lockedin/skills/lockedin-render-jaso/: RUBRIC.md  SKILL.md  banned_phrases.json  prompt-reviewer.md  prompt-writer.md  research-notes.md  reviewers.md
plugins/lockedin/skills/lockedin-render-resume-en/: RUBRIC.md  SKILL.md  banned_phrases.json  prompt-reviewer.md  prompt-writer.md  research-notes.md
plugins/selfgraph/.claude-plugin/: plugin.json
plugins/selfgraph/commands/: setup.md
plugins/selfgraph/scripts/: hud.py
plugins/selfgraph/skills/selfgraph-render-jaso/: RUBRIC.md  SKILL.md  banned_phrases.json  (+4 more)
selfgraph/: __init__.py  __main__.py  cli.py  config.py
selfgraph/commands/: __init__.py  doctor.py  experience.py  hud.py  ingest_dry.py  init.py  install.py  migrate.py  render_graph.py  template.py  validate.py
selfgraph/ingest/: docx.py  interview.py  markdown.py  pdf.py
selfgraph/ontology/: __init__.py  schema.py
selfgraph/render/: _template.py
selfgraph/storage/: graph.py  notes.py
tests/: research-allowlist.txt  test_capture_calibration.py  test_commands.py  test_hud.py  test_ideas_calibration.py  test_ingest.py  test_init_template_ingest.py  test_interview_calibration.py  test_interview_edge_inference.py  test_interview_resumability.py  test_jaso_calibration.py  test_master_view.py  test_oauth_usage.py  test_readme_promises.py  test_research_allowlist.py  test_resolve_slugs.py  test_resume_en_calibration.py  test_smoke.py  test_storage_roundtrip.py
tests/fixtures/: sample-vault.yaml
tests/fixtures/jaso/: TEMPLATE.md
(+78 files in other folders)
