[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lockedin"
version = "1.2.0"
description = "Your experience as a knowledge graph. Claude Code-native."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "daypunk", email = "business@daypunk.com" }]
keywords = ["claude-code", "knowledge-graph", "ontology", "personal-knowledge-management", "career", "resume"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = []

[project.optional-dependencies]
pdf = ["pypdf>=4.0"]
docx = ["python-docx>=1.1"]
yaml = ["PyYAML>=6.0"]
all = ["pypdf>=4.0", "python-docx>=1.1", "PyYAML>=6.0"]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "PyYAML>=6.0",
]

[project.scripts]
lockedin = "lockedin.cli:main"

[project.urls]
Homepage = "https://github.com/daypunk/LockedIn"
Repository = "https://github.com/daypunk/LockedIn"
Issues = "https://github.com/daypunk/LockedIn/issues"

[tool.hatch.build.targets.wheel]
packages = ["lockedin"]

[tool.hatch.build.targets.wheel.force-include]
"lockedin/skill" = "lockedin/skill"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
